<resources>
    <string name="app_name">Menu App</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_fish">Fish</string>
    <string name="title_squid">Squid</string>
    <string name="title_chicken">Chicken</string>
    <string name="title_beer">Beer</string>
    <string name="title_wine">Wine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="sign_up">Sign up</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="no_text"></string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_login">Login</string>
    <string name="action_order_management">Order Cart</string>
    <string name="action_menu_management">Menu Manager</string>
    <string name="title_search_result">"Wine" Found</string>
    <string name="action_table_management">Table Management</string>
    <string name="title_order_now">ORDER NOW</string>
    <string name="action_payment_management">Pay The Meal</string>
    <string name="title_dessert">Dessert</string>
    <string name="title_add_dish">Manage Dish</string>
</resources>
